[gd_scene load_steps=10 format=3 uid="uid://ca8ckarq387vx"]

[ext_resource type="Script" path="res://Components/PlantComponents/Plant.gd" id="1_fjeg2"]
[ext_resource type="Script" path="res://Resources/R_PlantStage.gd" id="2_mmhd2"]
[ext_resource type="Texture2D" uid="uid://bn57acatmgyov" path="res://Art/Plants/clownflower.png" id="3_m0hxm"]
[ext_resource type="Texture2D" uid="uid://dv4aw25eraytb" path="res://Art/Plants/128 Versions/flour.png" id="4_om45w"]
[ext_resource type="Script" path="res://Components/Finite State Machine/StateMachine.gd" id="7_b1j3s"]
[ext_resource type="Script" path="res://Components/PlantComponents/State_PlantGrowing.gd" id="8_egk3x"]
[ext_resource type="Script" path="res://Components/PlantComponents/State_PlantHarvest.gd" id="9_7xro5"]
[ext_resource type="Script" path="res://Components/PlantComponents/State_PlantNeed.gd" id="10_dke4d"]

[sub_resource type="Resource" id="Resource_24io6"]
script = ExtResource("2_mmhd2")
Sprite = ExtResource("3_m0hxm")
TimeToGrow = 10.0
RewardMoney = 13

[node name="Plant" type="Node2D"]
script = ExtResource("1_fjeg2")
Stages = Array[ExtResource("2_mmhd2")]([SubResource("Resource_24io6")])

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("4_om45w")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -26.0
offset_top = -91.0
offset_right = 89.0
offset_bottom = -51.0
text = "Ready"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_b1j3s")
initial_state = NodePath("State_PlantNeed")

[node name="State_PlantGrowing" type="Node" parent="StateMachine"]
script = ExtResource("8_egk3x")

[node name="State_PlantHarvest" type="Node" parent="StateMachine"]
script = ExtResource("9_7xro5")

[node name="State_PlantNeed" type="Node" parent="StateMachine"]
script = ExtResource("10_dke4d")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="StateMachine/State_PlantGrowing" method="_on_timer_timeout"]
